# usp

./: CHANGELOG.md  README.md  usp_workspace.code-workspace
doc/: KNOWN_LIMITATIONS.md  doxyfile  usp_lbm_porting_guide.md  usp_porting_guide.md
examples/: CMakeLists.txt  main.c  main.h  modem_pinout.h
examples/main_examples/: example_options.h  main_lctt_certif.c  main_periodical_uplink.c  main_porting_tests.c
examples/main_examples/cad_example/: app_cad.c  app_cad.h  main_cad.c  main_cad.h
examples/main_examples/direct_driver_access_example/: app_direct_driver_access.c  app_direct_driver_access.h  main_direct_driver_access.c  main_direct_driver_access.h
examples/main_examples/geoloc_example/: main_geolocation.c
examples/main_examples/geoloc_example/lr11xx_board/: lr1110_board_mb1lxks.c
examples/main_examples/hw_modem/: cmd_parser.c  cmd_parser.h  geoloc_bsp.c  hw_modem.c  main_hw_modem.c
examples/main_examples/hw_modem/serialization/helpers/: rac_context_converter.c
examples/main_examples/lrfhss_example/: app_lrfhss_example.c  app_lrfhss_example.h  main_lrfhss_example.c  main_lrfhss_example.h
examples/main_examples/multiprotocol_example/: main_multiprotocol.c  main_multiprotocol.h
examples/main_examples/packet_error_rate_example/: app_per.c  app_per.h  main_per.c  main_per.h
examples/main_examples/packet_error_rate_flrc_example/: app_per_flrc.c  app_per_flrc.h  main_per_flrc.c  main_per_flrc.h
examples/main_examples/packet_error_rate_fsk_example/: app_per_fsk.c  app_per_fsk.h  main_per_fsk.c  main_per_fsk.h
examples/main_examples/ping_pong_example/: app_periodic_uplink.c  app_ping_pong.c  main_ping_pong.c
examples/main_examples/ranging_demo/: app_ranging_hopping.c  main_ranging_demo.c  main_ranging_demo.h
examples/main_examples/rf_certification_example/: app_notification.c  app_notification.h  app_rf_certification.c  app_rf_certification.h  main_rf_certification.c  main_rf_certification.h
examples/main_examples/spectral_scan_example/: app_spectral_scan.c  app_spectral_scan.h  main_spectral_scan.c  main_spectral_scan.h
examples/main_examples/tx_cw_example/: app_tx_cw.c  app_tx_cw.h  main_tx_cw.c  main_tx_cw.h
examples/radio_hal/: lr20xx_pa_pwr_cfg.h  ral_lr20xx_bsp.c  ral_sx127x_bsp.c  ral_sx128x_bsp.c  sx127x_hal.c  sx128x_hal.c
examples/smtc_hal_l0_LL/: smtc_hal_dbg_trace.h  smtc_hal_eeprom.c  smtc_hal_eeprom.h  smtc_hal_gpio.c  smtc_hal_gpio.h  smtc_hal_gpio_pin_names.h  smtc_hal_lp_timer.c  smtc_hal_lp_timer.h  smtc_hal_mcu.c  smtc_hal_mcu.h  smtc_hal_rng.c  smtc_hal_rng.h  smtc_hal_rtc.c  smtc_hal_rtc.h  smtc_hal_spi.c  smtc_hal_trace.c  smtc_hal_trace.h  smtc_hal_uart.c  smtc_hal_uart.h  smtc_hal_watchdog.c
examples/smtc_hal_l4/: smtc_hal_dbg_trace.h  smtc_hal_flash.c  smtc_hal_flash.h  smtc_hal_gpio.c  smtc_hal_gpio.h  smtc_hal_libc_stub.c  smtc_hal_lp_timer.c  smtc_hal_lp_timer.h  smtc_hal_mcu.c  smtc_hal_mcu.h  smtc_hal_rng.c  smtc_hal_rtc.c  smtc_hal_spi.c  smtc_hal_spi.h  smtc_hal_trace.c  smtc_hal_uart.c  smtc_hal_watchdog.c  smtc_hal_watchdog.h
examples/smtc_modem_hal/: smtc_modem_hal.c
examples/smtc_sw_platform/: smtc_sw_platform_helper.c  smtc_sw_platform_helper.h
protocols/lbm_lib/: CMakeLists.txt  README.md
protocols/lbm_lib/makefiles/: lr20xx.mk
protocols/lbm_lib/smtc_modem_api/: CMakeLists.txt  smtc_modem_utilities.h
protocols/lbm_lib/smtc_modem_core/: CMakeLists.txt  smtc_modem.c  smtc_modem_crypto.cmake
protocols/lbm_lib/smtc_modem_core/logging/: smtc_modem_hal_dbg_trace.h
protocols/lbm_lib/smtc_modem_core/lr1mac/src/services/: smtc_lbt.c
protocols/lbm_lib/smtc_modem_core/lr1mac/src/smtc_real/: CMakeLists.txt
protocols/lbm_lib/smtc_modem_core/lr1mac/src/smtc_real/src/: smtc_real.c
protocols/lbm_lib/smtc_modem_core/modem_services/lfu_service/: file_upload.c
smtc_rac_lib/: CMakeLists.txt  README.md
smtc_rac_lib/radio_drivers/lr20xx_driver/: CHANGELOG.md  README.md
smtc_rac_lib/radio_planner/: CMakeLists.txt
smtc_rac_lib/radio_planner/src/: radio_planner.c  radio_planner_types.h
smtc_rac_lib/smtc_modem_hal/: CHANGELOG.md
smtc_rac_lib/smtc_rac/: smtc_rac.c  smtc_rac.h  smtc_rac_flrc.c  smtc_rac_fsk.c  smtc_rac_lbt.c  smtc_rac_lbt.h  smtc_rac_local_func.h  smtc_rac_lora.c  smtc_rac_lrfhss.c
smtc_rac_lib/smtc_rac_api/: smtc_rac_api.h  smtc_rac_log.h  smtc_rac_version.h
smtc_rac_lib/smtc_ral/src/: ral.h  ral_defs.h  ral_drv.h  ral_llcc68.c  ral_llcc68.h  ral_lr11xx.c  ral_lr20xx.c  ral_lr20xx.h  ral_sx127x.c  ral_sx127x.h  ral_sx128x.c  ral_sx128x.h
smtc_rac_lib/smtc_ralf/src/: ralf_lr20xx.c  ralf_sx128x.c
zephyr/: module.yml
